# decide-hub

./: .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: ci.yml
data/: .gitignore  retrieval_corpus.json
docker/prometheus/: prometheus.yml
docs/: benchmarks.md  development.md  n8n-workflow.json
docs/plans/: 2026-04-04-phase2-3-design.md  2026-04-04-phase2-bandit-implementation-plan.md  2026-04-05-phase2.2-retrieval-implementation-plan.md  2026-04-05-phase2.3-experimentation-implementation-plan.md  2026-04-05-phase2.4-cf-features-implementation-plan.md  (+8 more)
operator_ui/: package-lock.json  package.json  playwright.config.ts
scripts/: compare_estimators.py  download_amazon_reviews.py  generate_frozen_contexts.py  generate_shap_plot.py  run_bandit_comparison.py  run_cf_comparison.py  run_experiment.py  run_pareto_analysis.py  run_regret_comparison.py
tests/: conftest.py  mock_lead_api.py  test_anomaly.py  test_approve_reject.py  test_audit.py  test_auth.py  test_automations.py  test_bandit.py  test_bandit_comparison.py  test_comparison.py  test_constrained.py  test_data_adapter.py  test_db.py  test_doubly_robust.py  test_embeddings.py  test_evaluation.py  test_experiment.py  test_kpi.py  test_ltr_scorer.py  test_neural_scorer.py  test_online_sim.py  test_pltv.py  test_policies.py  test_posthog.py  test_rate_limit.py  test_replay.py  test_report.py  test_retrieval.py  test_retry.py  test_scorer_embeddings.py  test_serving.py  test_shadow.py  test_upload.py  test_webhook.py  test_ws.py
(+71 files in other folders)
