[project]
name = "decide-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "PyJWT>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
